# fisher

./: .gitignore  README.md  pyproject.toml
dataset/2 - labelled/: classes.txt  notes.json
dataset/2 - labelled/labels/: 04330f58-WoWScrnShot_071125_162012.txt  085962d6-WoWScrnShot_071125_100830.txt  089e6293-WoWScrnShot_070625_214417.txt  08a3fb78-WoWScrnShot_071125_095520.txt  0a032f75-WoWScrnShot_071125_163744.txt  0ad839ae-WoWScrnShot_071125_163846.txt  13b71b08-WoWScrnShot_071125_102312.txt  15a2678a-WoWScrnShot_071125_163924.txt  173b3e8b-WoWScrnShot_071125_101600.txt  17b4af9c-WoWScrnShot_071125_161809.txt  17b81ab0-WoWScrnShot_071125_095511.txt  1b76c36f-WoWScrnShot_071125_102244.txt  20f4409b-WoWScrnShot_071125_102254.txt  22116f75-WoWScrnShot_070625_215208.txt  2774fd0f-WoWScrnShot_071125_102200.txt  295824a1-WoWScrnShot_071125_095325.txt  3510ac5c-WoWScrnShot_071125_163506.txt  35886ad6-WoWScrnShot_071125_163852.txt  39a9a1a9-WoWScrnShot_071125_090846.txt  3b24a9da-WoWScrnShot_070625_214353.txt  4025ba42-WoWScrnShot_071125_162154.txt  41931ad5-WoWScrnShot_071125_090729.txt  43bf7481-WoWScrnShot_071125_092020.txt  45cdb433-WoWScrnShot_071125_092025.txt  4b1a3d52-WoWScrnShot_071125_091355.txt  52da2081-WoWScrnShot_071125_161815.txt  532d3dd3-WoWScrnShot_071125_163819.txt  553c369c-WoWScrnShot_071125_163705.txt  56c7a3c1-WoWScrnShot_071125_164128.txt  59856684-WoWScrnShot_071125_100859.txt  (+49 more)
dataset/3 - final/: data.yaml
src/: dataset.py  main.py  utils.py
src/agents/: MatchAll.py  MatchBest.py  MatchYolo.py
src/preprocessors/: Region.py
(+28 files in other folders)
